--- a/ui/package.json
+++ b/ui/package.json
@@ -39,7 +39,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.7.0",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.8.4",
+    "axios": "^1.13.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -59,7 +59,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sass": "^1.86.3",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
@@ -67,9 +67,10 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^22.18.12",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@types/react-redux": "^7.1.34",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
