保存当前改动

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,6 +7,9 @@ WORKDIR /usr/src/openmemory
 COPY requirements.txt .
 RUN pip install -i https://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com -r requirements.txt
 
+# Apply MCP SSE server patch for MCPhub compatibility
+COPY mcp_sse_patched.py /usr/local/lib/python3.12/site-packages/mcp/server/sse.py
+
 COPY config.json .
 COPY . .
 
