--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -17,3 +17,8 @@ anthropic==0.51.0
 ollama==0.4.8
 grpcio>=1.50.0
 qdrant-client>=1.10.0
+# admin users route deps
+pydantic[email]
+captcha>=0.5.0
+stripe>=5.0.0
+neo4j>=5.20.0
