--- a/ui/package.json
+++ b/ui/package.json
@@ -53,6 +53,8 @@
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-force-graph-2d": "^1.29.0",
+    "react-force-graph-3d": "^1.29.0",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
@@ -62,6 +64,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.2",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
